Resolves: tdf#93847 gtk3: paint blocking is unnecessary and harmful

for gtk3. Probably also a fairly dumb idea for gtk2, but with the
extra unblocking opportunities it probably just "works out ok" in
that model.

Change-Id: I3d4716c691fc84a5e68c210fee51f9e31cfacc02